--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,64 @@
-h1 {
-  color: aqua;
+body {
+  background: linear-gradient(#e66465, #9198e5);
+}
+.sig {
+  margin-top: 0px;
+  font-size: 10px;
+}
+.temp {
+  position: relative;
+  left: 560px;
+  top: 100px;
+  font-size: 70px;
+  color: white;
+}
+.back {
+  margin-top: 500px;
+}
+.city {
+  position: relative;
+  left: 750px;
+  bottom: 20px;
+  font-size: 35px;
+  color: white;
+}
+.date {
+  position: relative;
+  left: 750px;
+  bottom: 50px;
+  font-size: 15px;
+  color: white;
+}
+.sun {
+  position: relative;
+  left: 910px;
+  bottom: 150px;
+  width: 50px;
+  height: 50px;
+}
+.precip {
+  position: relative;
+  left: 923px;
+  bottom: 75px;
+  font-size: 10px;
+  color: black;
+}
+div {
+  width: 500px;
+  height: 400px;
+  border: 5px solid #c67896;
+  padding: 50px;
+  margin: 20px;
+  position: relative;
+  top: 300px;
+  left: 450px;
+  background-image: radial-gradient(#e66465, #9198e5);
+}
+.balloon {
+  position: relative;
+  left: 472px;
+  bottom: 1055px;
+  width: 605px;
+  height: 500px;
+  opacity: 10%;
 }
